<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="374dp"
        android:layout_height="481dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#F8F8F8"
        android:radius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/button"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:text="Sing Up"
            android:backgroundTint="@color/blue"
            android:background="@drawable/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.752"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPassword1"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/foredittext"
            android:ems="10"
            android:text="Date of Birth"
            android:textColor="@color/blue"
            android:inputType="date"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/foredittext"
            android:ems="10"
            android:textSize="14sp"
            android:text="@string/passw"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.501"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/foredittext"
            android:ems="10"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.213"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/foredittext"
            android:ems="10"
            android:inputType="textPersonName"
            android:radius="3dip"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.143"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtTop"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="345dp"
            android:layout_marginBottom="446dp"
            android:text="@string/txtSing"
            android:textColor="@color/blue"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>